--- a/Website/index.html
+++ b/Website/index.html
@@ -1,4 +1,21 @@
-<!DOCTYPE html>
-<html>
-    
+<!DOCTYPE html> <!--this is a declaration this is a HTML 5 document -->
+<html> <!-- this ia a pair of tags / represents the root element of an html page -->
+    <head> <!-- contains information about your page-->
+        <title>My first website </title>
+    </head>
+    <body>  
+        <h1> This is an h1 heading</h1> <!--h are used for larger text or titles-->
+        <hr> <!-- horizontal line across your page-->
+        <p> <!-- this is a paragraph -->
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+         Hic consequuntur obcaecati ut porro voluptas neque vitae explicabo ea vero iusto perferendis, 
+         alias omnis, odit aspernatur voluptates aut autem, dolorum cupiditate!  
+        </p>
+        <br> <!-- this is a line break-->
+        <pre> <!-- this is a pre formatted text / paragraph -->
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+         Hic consequuntur obcaecati ut porro voluptas neque vitae explicabo ea vero iusto perferendis, 
+         alias omnis, odit aspernatur voluptates aut autem, dolorum cupiditate!  
+        </pre>
+    </body>
 </html>
